- fixing ClipPath issues - updating TODO - moving collapse arrows to left

--- a/client/src/assets/css/deepphe.css
+++ b/client/src/assets/css/deepphe.css
@@ -401,7 +401,12 @@ svg .tick text {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
 
+.basicCardHeader .MuiIconButton-root {
+    position: absolute;
+    left: 0;
+    top: 5px;
 }
 
 
